--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-intersection-observer": "^10.0.2",
+    "react-player": "^3.4.0",
     "react-router": "^7.13.0"
   },
   "devDependencies": {
