--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^19.2.0",
     "react-intersection-observer": "^10.0.2",
     "react-player": "^3.4.0",
-    "react-router": "^7.13.0"
+    "react-router": "^7.13.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
