--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-persist-client": "^5.90.22",
     "axios": "^1.13.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.563.0",
@@ -22,6 +23,8 @@
     "react-intersection-observer": "^10.0.2",
     "react-player": "^3.4.0",
     "react-router": "^7.13.0",
+    "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
